== Changelog ==

= 0.0.5 =
* Handle blocks being inside an iFrame in editor view (fixes incompatibility with Gutenberg plugin)

= 0.0.4 =
* Improved error handling, including more visible error messages
* Add labels to custom block settings, fix 'found in post' for entities

= 0.0.3 =
* Add support for ChatGPT blocks
* Notification when using unsupported database version
* Fix rich text rendering
* Icon for block category
* Better error reporting

= 0.0.2 =
* Improve rich text editing handling, handling older blocks in editor and API endpoints.

= 0.0.1 =
* First release of the plugin.
