@@ -36,9 +36,9 @@ You can also build your own block for the Block Protocol without any PHP, and pu
 
 **5.** If you want to add your own block to the plugin, visit https://blockprotocol.org/docs/developing-blocks
 
-Note that you must be using at least MySQL 8. To check please navigate to `Admin -> Tools -> Site Health -> Info -> Database`.
-The previous versions of MySQL (5.6 and 5.7) respectively reach(ed) end of life in February 2021 and October 2023. 
-You should upgrade to MySQL 8 now to continue to receive security updates, as well as to use the Block Protocol within WordPress.
+Note that you must be using at least MySQL 5.7.8. To check please navigate to `Admin -> Tools -> Site Health -> Info -> Database`.
+MySQL 5.6 and 5.7 respectively reach(ed) end of life in February 2021 and October 2023. 
+You should upgrade to MySQL 8 now to continue to receive security updates, as well as to get the best Block Protocol experience within WordPress.
 
 When you install or use the _Block Protocol for WordPress_ plugin, we don’t send any data to any third-party analytics services. 
 However, we do collect the domain name of the website that the plugin has been activated on, and limited aggregate information 
