@@ -20,19 +20,9 @@ function generate_block_protocol_guidv4()
   return vsprintf('%s%s-%s-%s-%s-%s%s%s', str_split(bin2hex($data), 4));
 }
 
-function get_block_protocol_subgraph(
-  string $base_where_term,
-  int $has_left_incoming_depth,
-  int $has_right_incoming_depth,
-  int $has_left_outgoing_depth,
-  int $has_right_outgoing_depth
-)
+function block_protocol_entity_selection()
 {
-  global $wpdb;
-
-  $table = get_block_protocol_table_name();
-
-  $selection = "
+  return "
   entity_id,
   entity_type_id,
   left_entity_id,
@@ -44,6 +34,194 @@ function get_block_protocol_subgraph(
   created_at,
   updated_by_id,
   updated_at";
+
+}
+
+/**
+ * Natively traverse a subgraph using a base where term.
+ * This functions is meant to be as compatible as possible with various MySQL/MariaDB versions
+ */
+function block_protocol_native_subgraph_query(
+  string $base_where_term,
+  int $has_left_incoming_depth,
+  int $has_right_incoming_depth,
+  int $has_left_outgoing_depth,
+  int $has_right_outgoing_depth
+) {
+  global $wpdb;
+
+  $table = get_block_protocol_table_name();
+
+  $subgraph = [];
+  $queue = [];
+
+  // Initial query using the base where term
+  $selection = block_protocol_entity_selection();
+  $sql = $wpdb->prepare("
+    SELECT
+      " . $selection . ",
+      0 as has_left_incoming_depth,
+      0 as has_right_incoming_depth,
+      0 as has_left_outgoing_depth,
+      0 as has_right_outgoing_depth
+    FROM {$table}
+    " . $base_where_term
+  );
+
+  // Initialize the queue with the starting nodes
+  $queue = $wpdb->get_results($sql, ARRAY_A);
+
+  $visited = [];
+
+  // Loop while the queue is not empty
+  while (!empty($queue)) {
+    // Dequeue the next node
+    $node = array_shift($queue);
+
+    // Skip nodes that have already been visited
+    if ($visited[$node['entity_id']] ?? false) {
+        continue;
+    }
+
+    $visited[$node['entity_id']] = true;
+
+    // ensure that the depths are all ints
+    $node['has_left_incoming_depth'] = (int) $node['has_left_incoming_depth'];
+    $node['has_right_incoming_depth'] = (int) $node['has_right_incoming_depth'];
+    $node['has_left_outgoing_depth'] = (int) $node['has_left_outgoing_depth'];
+    $node['has_right_outgoing_depth'] = (int) $node['has_right_outgoing_depth'];
+
+    // Add the node to the result list
+    $subgraph[] = $node;
+
+    $next_nodes = [];
+
+    // Add nodes connected by incoming has_left links
+    if ($node['has_left_incoming_depth'] < $has_left_incoming_depth) {
+      $sql = $wpdb->prepare(
+        "SELECT
+          " . $selection . ",
+          %d + 1 as has_left_incoming_depth,
+          %d as has_right_incoming_depth,
+          %d as has_left_outgoing_depth,
+          %d as has_right_outgoing_depth
+        FROM {$table}
+        WHERE left_entity_id = %d
+        ",
+        $node['has_left_incoming_depth'],
+        $node['has_right_incoming_depth'],
+        $node["has_left_outgoing_depth"],
+        $node["has_right_outgoing_depth"],
+        $node['entity_id']
+      );
+
+      $next_nodes = array_merge($next_nodes, $wpdb->get_results($sql, ARRAY_A));
+    }
+
+    // Add nodes connected by incoming has_right links
+    if ($node['has_right_incoming_depth'] < $has_right_incoming_depth) {
+      $sql = $wpdb->prepare(
+        "SELECT
+          " . $selection . ",
+          %d as has_left_incoming_depth,
+          %d + 1 as has_right_incoming_depth,
+          %d as has_left_outgoing_depth,
+          %d as has_right_outgoing_depth
+        FROM {$table}
+        WHERE right_entity_id = %d
+        ",
+        $node['has_left_incoming_depth'],
+        $node['has_right_incoming_depth'],
+        $node["has_left_outgoing_depth"],
+        $node["has_right_outgoing_depth"],
+        $node['entity_id']
+      );
+
+      $next_nodes = array_merge($next_nodes, $wpdb->get_results($sql, ARRAY_A));
+    }
+
+    // Add nodes connected by outgoing has_left links
+    if ($node['has_left_outgoing_depth'] < $has_left_outgoing_depth) {
+      $sql = $wpdb->prepare(
+        "SELECT
+          " . $selection . ",
+          %d as has_left_incoming_depth,
+          %d as has_right_incoming_depth,
+          %d + 1 as has_left_outgoing_depth,
+          %d as has_right_outgoing_depth
+        FROM {$table}
+        WHERE entity_id = %d
+        ",
+        $node['has_left_incoming_depth'],
+        $node['has_right_incoming_depth'],
+        $node["has_left_outgoing_depth"],
+        $node["has_right_outgoing_depth"],
+        $node['left_entity_id']
+      );
+
+      $next_nodes = array_merge($next_nodes, $wpdb->get_results($sql, ARRAY_A));
+    }
+
+    // Add nodes connected by outgoing has_right links
+    if ($node['has_right_outgoing_depth'] < $has_right_outgoing_depth) {
+      $sql = $wpdb->prepare(
+        "SELECT
+          " . $selection . ",
+          %d as has_left_incoming_depth,
+          %d as has_right_incoming_depth,
+          %d as has_left_outgoing_depth,
+          %d + 1 as has_right_outgoing_depth
+        FROM {$table}
+        WHERE entity_id = %d
+        ",
+        $node['has_left_incoming_depth'],
+        $node['has_right_incoming_depth'],
+        $node["has_left_outgoing_depth"],
+        $node["has_right_outgoing_depth"],
+        $node['right_entity_id']
+      );
+
+      $next_nodes = array_merge($next_nodes, $wpdb->get_results($sql, ARRAY_A));
+    }
+
+    // Add the next nodes to the queue
+    foreach ($next_nodes as $next_node)  {
+      $entity_id = $next_node['entity_id'];
+
+      if (!($visited[$entity_id] ?? false)) {
+        $queue[] = $next_node;
+      }
+    }
+  }
+
+  foreach($subgraph as &$element) {
+    unset($element["has_left_incoming_depth"]);
+    unset($element["has_right_incoming_depth"]);
+    unset($element["has_left_outgoing_depth"]);
+    unset($element["has_right_outgoing_depth"]);
+  }
+
+  return $subgraph;
+}
+
+
+/**
+ * Traverse a subgraph using Recursive CTEs in the DB.
+ * This functions is likely unsupported by older versions of the DB.
+ */
+function block_protocol_db_subgraph_query(
+  string $base_where_term,
+  int $has_left_incoming_depth,
+  int $has_right_incoming_depth,
+  int $has_left_outgoing_depth,
+  int $has_right_outgoing_depth
+)
+{
+  global $wpdb;
+
+  $table = get_block_protocol_table_name();
+
+  $selection = block_protocol_entity_selection();
 
   $sql = $wpdb->prepare(
     "WITH RECURSIVE linked_entities AS (
@@ -77,8 +255,8 @@ function get_block_protocol_subgraph(
         has_right_incoming_depth,
         has_left_outgoing_depth,
         has_right_outgoing_depth
-    FROM {$table} e2 
-    JOIN linked_entities 
+    FROM {$table} e2
+    JOIN linked_entities
       ON e2.left_entity_id = linked_entities.entity_id
     WHERE has_left_incoming_depth < %d
 
@@ -101,8 +279,8 @@ function get_block_protocol_subgraph(
         has_right_incoming_depth + 1,
         has_left_outgoing_depth,
         has_right_outgoing_depth
-    FROM {$table} e2 
-    JOIN linked_entities 
+    FROM {$table} e2
+    JOIN linked_entities
       ON e2.right_entity_id = linked_entities.entity_id
     WHERE has_right_incoming_depth < %d
 
@@ -125,8 +303,8 @@ function get_block_protocol_subgraph(
         has_right_incoming_depth,
         has_left_outgoing_depth +1,
         has_right_outgoing_depth
-    FROM {$table} e2 
-    JOIN linked_entities 
+    FROM {$table} e2
+    JOIN linked_entities
       ON e2.entity_id = linked_entities.left_entity_id
     WHERE has_left_outgoing_depth < %d
 
@@ -149,8 +327,8 @@ function get_block_protocol_subgraph(
         has_right_incoming_depth,
         has_left_outgoing_depth,
         has_right_outgoing_depth + 1
-    FROM {$table} e2 
-    JOIN linked_entities 
+    FROM {$table} e2
+    JOIN linked_entities
       ON e2.entity_id = linked_entities.right_entity_id
     WHERE has_right_outgoing_depth < %d
   )
@@ -165,6 +343,40 @@ function get_block_protocol_subgraph(
   );
 
   $subgraph = $wpdb->get_results($sql, ARRAY_A);
+
+  return $subgraph;
+}
+
+function get_block_protocol_subgraph(
+  string $base_where_term,
+  int $has_left_incoming_depth,
+  int $has_right_incoming_depth,
+  int $has_left_outgoing_depth,
+  int $has_right_outgoing_depth
+)
+{
+  global $wpdb;
+  // See https://dev.mysql.com/doc/refman/8.0/en/mysql-nutshell.html
+  $mysql_recursive_cte_version = "8.0";
+  // See https://mariadb.com/kb/en/mariadb-1022-release-notes/#notable-changes
+  $mariadb_recursive_cte_version = "10.2.2";
+
+  // Dynamically choose how to execute the query based on the database version
+  $action =
+    block_protocol_database_at_version(
+      $mysql_recursive_cte_version,
+      $mariadb_recursive_cte_version
+    )
+    ? "block_protocol_db_subgraph_query"
+    : "block_protocol_native_subgraph_query";
+
+  $subgraph = ($action)(
+    $base_where_term,
+    $has_left_incoming_depth,
+    $has_right_incoming_depth,
+    $has_left_outgoing_depth,
+    $has_right_outgoing_depth,
+  );
 
   block_protocol_maybe_capture_error($wpdb->last_error);
   return $subgraph;
